--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Überhang – Beladen-% Rechner</title>
+  <title>Überhangmeldung – Beladen-% Rechner</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -71,7 +71,7 @@
   <div class="form-group">
     <label for="innenlaenge">Innenlänge (Lademeter-Basis)</label>
     <input type="number" id="innenlaenge" value="7.00" step="0.01">
-    <small>Standard bei euch 7,00 m. Wird lokal gespeichert.</small>
+    <small>Wechselbrücke C745 7,00 m. 0,5 für Ladungssicherung.</small>
   </div>
 
   <div class="form-group">
@@ -116,4 +116,5 @@
   </script>
 </body>
 </html>
+
 
