--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="result" id="result"></div>
 
   <div class="formula">
-    Formel: ((Innenlänge − freie Länge) ÷ Innenlänge) × 100
+    Formel:Bitte immer auf oder abrunden. bsp: 55,21% --> 60% bei 54,9%---> 50%
   </div>
 
   <script>
@@ -175,5 +175,6 @@ async function senden() {
   }
 }
 </script>
+
 
 
