--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="result" id="result"></div>
 
   <div class="formula">
-    Formel:Bitte immer auf oder abrunden. bsp: 55,21% --> 60% bei 54,9%---> 50%
+    Bitte ab 21% immer mit 30% abmelden!!!
   </div>
 
   <script>
@@ -175,6 +175,7 @@ async function senden() {
   }
 }
 </script>
+
 
 
 
